--- a/ShopNote/app/build.gradle
+++ b/ShopNote/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+
 }
