--- a/ShopNote/app/build.gradle
+++ b/ShopNote/app/build.gradle
@@ -27,5 +27,9 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
 
 }
